styles.css
body{
  background-image: url("img/background.jpg");
  overflow: hidden;
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  min-width: 100vw;
  transition: all .2s ease;
  margin: 0;
  padding: 0;
  font-family: 'Segoe UI Variable', sans-serif;
  user-select: none;
}
  
.center{
display: flex;
justify-content: center;
}

.startmenu{
  position: absolute;
  backdrop-filter: blur(20px); /* gives the start menu a blur */
  background-color: rgba(255,255,255,.80); /* gives the start menu color */
  bottom: -95%; /* positions the start menu */
  height: 650px;
  width: 625px;
  transition: all .25s cubic-bezier(.62,0,.32,1); /* changes the start menu animation */
  border-radius: 8px; /* rounds the corners */
  z-index: 11; /* makes the start menu appear on top of everything else */
  transition: all .2s cubic-bezier(.79,.14,.15,.86);
}

.sTop{
  margin: 25px 0px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.pinnedlabel{
  margin-top: -5px;
  margin-left: 45px;
}

.allapps img{
  height: 20px;
  border-radius: 4px;
  margin-right: 45px;
}

.starticons img{
  display: block;
  margin: 0 auto;
  margin-top: 12px;
  width:30px;
}

.starticons{
  width: 100px;
  font-size: 13px;
}

.starticons:hover{
  background: white;
  width: 100px;
  border-radius: 5px;
}

.startrow{
  display: flex;
  justify-content: center;
  margin-left: 15px;
  width: 595px;
  max-width: 595px;
}

.taskbar{
  -webkit-backdrop-filter: saturate(3) blur(20px);
  backdrop-filter: saturate(3) blur(20px);
  background-color: rgba(255,255,255,.80);
  width: 100%;
  min-width: 100%;
  position: absolute;
  bottom: 0;
  margin: 0;
  padding: 0;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 11000;
}

.taskbariconscenter{
  display: flex;
}
.taskbariconsimg{
  width: 25px;
  transition: all .1s;
}

.taskbaricons{
  margin: 0px 2.5px;
  padding: 7px;
  width:25px;
  height: 25px;
  text-align: center;
}

